:fire: Working example.

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,11 +2,11 @@ kotlin.code.style=official
 
 # Project configuration
 group_name = com.mattmx
-id = template
+id = nametags
 version = 1.0
 
-plugin_name = Template
-plugin_main_class_name = TemplatePlugin
+plugin_name = NameTags
+plugin_main_class_name = NameTags
 plugin_author = MattMX
 
 include_commit_hash = true
