--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,9 @@ placeholderapi = "2.11.6"
 ktgui = "2.4.2-alpha"
 runPaper = "2.2.4"
 
+packetEvents = "2.4.0"
+entityLib = "2.4.9-SNAPSHOT"
+
 [libraries]
 
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlin" }
@@ -16,6 +19,8 @@ kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "
 paper-api = { module = "io.papermc.paper:paper-api", version.ref = "paperApi" }
 placeholder-api = { module = "me.clip:placeholderapi", version.ref = "placeholderapi" }
 ktgui = { module = "com.mattmx:ktgui", version.ref = "ktgui" }
+packet-events = { module = "com.github.retrooper:packetevents-spigot", version.ref = "packetEvents" }
+entity-lib = { module = "me.tofaa.entitylib:spigot", version.ref = "entityLib" }
 
 [plugins]
 
