:bug: Fixed visual bug

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,3 +5,5 @@ shift:
   # Should we modify the opacity of the tag's background when the player shifts?
   enabled: true
   opacity: 80
+
+defaults:
