--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,7 +14,7 @@ defaults:
     - "<blue>%player_ping%ms</blue>"
   background: black
   billboard: center
-  shadow: true
+  text-shadow: true
   range: default
   gap: 0.2
 
