--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -17,6 +17,7 @@ defaults:
     - "<blue>%player_ping%ms</blue>"
   # Background colour of the billboard.
   # You can use AARRGGBB hex codes e.g '#FF00FF00'
+  # as well as RRGGBB hex codes e.g '#00FF00'
   # Otherwise you can use named text colours e.g 'white',
   # 'black' or 'red' as well as 'transparent'.
   background: black
