:bug: Fix #32 and introduce `smart` formatter

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -59,6 +59,7 @@ groups:
 # Options:
 # - minimessage
 # - legacy
+# - smart (Attempts to format legacy -> minimessage)
 formatter: minimessage
 
 # Extra features
