--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -36,13 +36,13 @@ defaults:
   # Fine-tune the position offset
   translate:
     x: 0.0
-    y: 0.0
+    y: 0.2 # Same as the gap option
     z: 0.0
   # Scale of the text display
   scale:
     x: 1.0
     y: 1.0
-    z: 1.0
+    z: 1.0 # Don't recommend changing this, it results in some strange results
   # Override the brightness level
   brightness: -1
   # Text shadow configuration
