Impl paper plugin to not shade enittylib

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,5 +8,6 @@ version = 1.5.2
 plugin_name = NameTags
 plugin_main_class_name = NameTags
 plugin_author = MattMX
+loader = com.mattmx.nametags.NameTagsLoader
 
 include_commit_hash = true
