--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -13,6 +13,6 @@ softdepend:
   - SkinsRestorer
 
 commands:
-  nametags-reload:
-    description: Reload the config
-    permission: nametags.command.reload
+  nametags:
+    description: Reload and debug commands
+    permission: nametags.command.admin
