--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,6 +12,9 @@ softdepend:
   - TAB
   - SkinsRestorer
 
+libraries:
+  - com.github.ben-manes.caffeine:caffeine:3.2.0
+
 commands:
   nametags:
     description: Reload and debug commands
